fix: overflow-y in css
It is causing double scrollbar in the right side.

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -6,6 +6,7 @@ body {
 .container {
   height: 100dvh;
   position: relative;
+  overflow-y: hidden;
 }
 
 header {
